miniav_ffi/lib/miniav_ffi_bindings.dart


@ffi.Native<
  ffi.Int Function(
    MiniAVScreenContextHandle,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<MiniAVVideoInfo>,
    ffi.Bool,
  )
>(symbol: 'MiniAV_Screen_ConfigureDisplay')
external int _MiniAV_Screen_ConfigureDisplay(
  MiniAVScreenContextHandle context,
  ffi.Pointer<ffi.Char> display_id,
  ffi.Pointer<MiniAVVideoInfo> format,
  bool capture_audio,
);

MiniAVResultCode MiniAV_Screen_ConfigureDisplay(
  MiniAVScreenContextHandle context,
  ffi.Pointer<ffi.Char> display_id,
  ffi.Pointer<MiniAVVideoInfo> format,
  bool capture_audio,
) => MiniAVResultCode.fromValue(
  _MiniAV_Screen_ConfigureDisplay(context, display_id, format, capture_audio),
);

@ffi.Native<
  ffi.Int Function(
    MiniAVScreenContextHandle,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<MiniAVVideoInfo>,
    ffi.Bool,
  )
>(symbol: 'MiniAV_Screen_ConfigureWindow')
external int _MiniAV_Screen_ConfigureWindow(
  MiniAVScreenContextHandle context,
  ffi.Pointer<ffi.Char> window_id,
  ffi.Pointer<MiniAVVideoInfo> format,
  bool capture_audio,
);

MiniAVResultCode MiniAV_Screen_ConfigureWindow(
  MiniAVScreenContextHandle context,
  ffi.Pointer<ffi.Char> window_id,
  ffi.Pointer<MiniAVVideoInfo> format,
  bool capture_audio,
) => MiniAVResultCode.fromValue(
  _MiniAV_Screen_ConfigureWindow(context, window_id, format, capture_audio),
);

@ffi.Native<
  ffi.Int Function(
    MiniAVScreenContextHandle,
    ffi.Pointer<ffi.Char>,
    ffi.Int,
    ffi.Int,
    ffi.Int,
    ffi.Int,
    ffi.Pointer<MiniAVVideoInfo>,
    ffi.Bool,
  )
>(symbol: 'MiniAV_Screen_ConfigureRegion')
external int _MiniAV_Screen_ConfigureRegion(
  MiniAVScreenContextHandle context,
  ffi.Pointer<ffi.Char> display_id,
  int x,
  int y,
  int width,
  int height,
  ffi.Pointer<MiniAVVideoInfo> format,
  bool capture_audio,
);

MiniAVResultCode MiniAV_Screen_ConfigureRegion(
  MiniAVScreenContextHandle context,
  ffi.Pointer<ffi.Char> display_id,
  int x,
  int y,
  int width,
  int height,
  ffi.Pointer<MiniAVVideoInfo> format,
  bool capture_audio,
) => MiniAVResultCode.fromValue(
  _MiniAV_Screen_ConfigureRegion(
    context,
    display_id,
    x,
    y,
    width,
    height,
    format,
    capture_audio,
  ),
);

@ffi.Native<
  ffi.Int Function(
    MiniAVScreenContextHandle,
    ffi.Pointer<MiniAVVideoInfo>,
    ffi.Pointer<MiniAVAudioInfo>,
  )
>(symbol: 'MiniAV_Screen_GetConfiguredFormats')
external int _MiniAV_Screen_GetConfiguredFormats(
  MiniAVScreenContextHandle context,
  ffi.Pointer<MiniAVVideoInfo> video_format_out,
  ffi.Pointer<MiniAVAudioInfo> audio_format_out,
);

MiniAVResultCode MiniAV_Screen_GetConfiguredFormats(
  MiniAVScreenContextHandle context,
  ffi.Pointer<MiniAVVideoInfo> video_format_out,
  ffi.Pointer<MiniAVAudioInfo> audio_format_out,
) => MiniAVResultCode.fromValue(
  _MiniAV_Screen_GetConfiguredFormats(
    context,
    video_format_out,
    audio_format_out,
  ),
);

@ffi.Native<
  ffi.Int Function(
    MiniAVScreenContextHandle,
    MiniAVBufferCallback,
    ffi.Pointer<ffi.Void>,
  )
>(symbol: 'MiniAV_Screen_StartCapture')
external int _MiniAV_Screen_StartCapture(
  MiniAVScreenContextHandle context,
  MiniAVBufferCallback callback,
  ffi.Pointer<ffi.Void> user_data,
);

MiniAVResultCode MiniAV_Screen_StartCapture(
  MiniAVScreenContextHandle context,
  MiniAVBufferCallback callback,
  ffi.Pointer<ffi.Void> user_data,
) => MiniAVResultCode.fromValue(
  _MiniAV_Screen_StartCapture(context, callback, user_data),
);

@ffi.Native<ffi.Int Function(MiniAVScreenContextHandle)>(
  symbol: 'MiniAV_Screen_StopCapture',
)
external int _MiniAV_Screen_StopCapture(MiniAVScreenContextHandle context);

MiniAVResultCode MiniAV_Screen_StopCapture(MiniAVScreenContextHandle context) =>
    MiniAVResultCode.fromValue(_MiniAV_Screen_StopCapture(context));

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.Pointer<MiniAVDeviceInfo>>,
    ffi.Pointer<ffi.Uint32>,
  )
>(symbol: 'MiniAV_Audio_EnumerateDevices')
external int _MiniAV_Audio_EnumerateDevices(
  ffi.Pointer<ffi.Pointer<MiniAVDeviceInfo>> devices,
  ffi.Pointer<ffi.Uint32> count,
);

MiniAVResultCode MiniAV_Audio_EnumerateDevices(
  ffi.Pointer<ffi.Pointer<MiniAVDeviceInfo>> devices,
  ffi.Pointer<ffi.Uint32> count,
) => MiniAVResultCode.fromValue(_MiniAV_Audio_EnumerateDevices(devices, count));

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Pointer<MiniAVAudioInfo>>,
    ffi.Pointer<ffi.Uint32>,
  )
>(symbol: 'MiniAV_Audio_GetSupportedFormats')
external int _MiniAV_Audio_GetSupportedFormats(
  ffi.Pointer<ffi.Char> device_id,
  ffi.Pointer<ffi.Pointer<MiniAVAudioInfo>> formats_out,
  ffi.Pointer<ffi.Uint32> count_out,
);

MiniAVResultCode MiniAV_Audio_GetSupportedFormats(
  ffi.Pointer<ffi.Char> device_id,
  ffi.Pointer<ffi.Pointer<MiniAVAudioInfo>> formats_out,
  ffi.Pointer<ffi.Uint32> count_out,
) => MiniAVResultCode.fromValue(
  _MiniAV_Audio_GetSupportedFormats(device_id, formats_out, count_out),
);

@ffi.Native<
  ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<MiniAVAudioInfo>)
>(symbol: 'MiniAV_Audio_GetDefaultFormat')
external int _MiniAV_Audio_GetDefaultFormat(
  ffi.Pointer<ffi.Char> device_id,
  ffi.Pointer<MiniAVAudioInfo> format_out,
);

MiniAVResultCode MiniAV_Audio_GetDefaultFormat(
  ffi.Pointer<ffi.Char> device_id,
  ffi.Pointer<MiniAVAudioInfo> format_out,
) => MiniAVResultCode.fromValue(
  _MiniAV_Audio_GetDefaultFormat(device_id, format_out),
);

@ffi.Native<
  ffi.Int Function(MiniAVAudioContextHandle, ffi.Pointer<MiniAVAudioInfo>)
>(symbol: 'MiniAV_Audio_GetConfiguredFormat')
external int _MiniAV_Audio_GetConfiguredFormat(
  MiniAVAudioContextHandle context,
  ffi.Pointer<MiniAVAudioInfo> format_out,
);

MiniAVResultCode MiniAV_Audio_GetConfiguredFormat(
  MiniAVAudioContextHandle context,
  ffi.Pointer<MiniAVAudioInfo> format_out,
) => MiniAVResultCode.fromValue(
  _MiniAV_Audio_GetConfiguredFormat(context, format_out),
);

@ffi.Native<ffi.Int Function(ffi.Pointer<MiniAVAudioContextHandle>)>(
  symbol: 'MiniAV_Audio_CreateContext',
)
external int _MiniAV_Audio_CreateContext(
  ffi.Pointer<MiniAVAudioContextHandle> context,
);

MiniAVResultCode MiniAV_Audio_CreateContext(
  ffi.Pointer<MiniAVAudioContextHandle> context,
) => MiniAVResultCode.fromValue(_MiniAV_Audio_CreateContext(context));

@ffi.Native<ffi.Int Function(MiniAVAudioContextHandle)>(
  symbol: 'MiniAV_Audio_DestroyContext',
)
external int _MiniAV_Audio_DestroyContext(MiniAVAudioContextHandle context);

MiniAVResultCode MiniAV_Audio_DestroyContext(
  MiniAVAudioContextHandle context,
) => MiniAVResultCode.fromValue(_MiniAV_Audio_DestroyContext(context));

@ffi.Native<
  ffi.Int Function(
    MiniAVAudioContextHandle,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<MiniAVAudioInfo>,
  )
>(symbol: 'MiniAV_Audio_Configure')
external int _MiniAV_Audio_Configure(
  MiniAVAudioContextHandle context,
  ffi.Pointer<ffi.Char> device_id,
  ffi.Pointer<MiniAVAudioInfo> format,
);

MiniAVResultCode MiniAV_Audio_Configure(
  MiniAVAudioContextHandle context,
  ffi.Pointer<ffi.Char> device_id,
  ffi.Pointer<MiniAVAudioInfo> format,
) => MiniAVResultCode.fromValue(
  _MiniAV_Audio_Configure(context, device_id, format),
);

@ffi.Native<
  ffi.Int Function(
    MiniAVAudioContextHandle,
    MiniAVBufferCallback,
    ffi.Pointer<ffi.Void>,
  )
>(symbol: 'MiniAV_Audio_StartCapture')
external int _MiniAV_Audio_StartCapture(
  MiniAVAudioContextHandle context,
  MiniAVBufferCallback callback,
  ffi.Pointer<ffi.Void> user_data,
);

MiniAVResultCode MiniAV_Audio_StartCapture(
  MiniAVAudioContextHandle context,
  MiniAVBufferCallback callback,
  ffi.Pointer<ffi.Void> user_data,
) => MiniAVResultCode.fromValue(
  _MiniAV_Audio_StartCapture(context, callback, user_data),
);

@ffi.Native<ffi.Int Function(MiniAVAudioContextHandle)>(
  symbol: 'MiniAV_Audio_StopCapture',
)
external int _MiniAV_Audio_StopCapture(MiniAVAudioContextHandle context);

MiniAVResultCode MiniAV_Audio_StopCapture(MiniAVAudioContextHandle context) =>
    MiniAVResultCode.fromValue(_MiniAV_Audio_StopCapture(context));

@ffi.Native<
  ffi.Int Function(
    ffi.UnsignedInt,
    ffi.Pointer<ffi.Pointer<MiniAVDeviceInfo>>,
    ffi.Pointer<ffi.Uint32>,
  )
>(symbol: 'MiniAV_Loopback_EnumerateTargets')
external int _MiniAV_Loopback_EnumerateTargets(
  int target_type_filter,
  ffi.Pointer<ffi.Pointer<MiniAVDeviceInfo>> targets_out,
  ffi.Pointer<ffi.Uint32> count_out,
);

MiniAVResultCode MiniAV_Loopback_EnumerateTargets(
  MiniAVLoopbackTargetType target_type_filter,
  ffi.Pointer<ffi.Pointer<MiniAVDeviceInfo>> targets_out,
  ffi.Pointer<ffi.Uint32> count_out,
) => MiniAVResultCode.fromValue(
  _MiniAV_Loopback_EnumerateTargets(
    target_type_filter.value,
    targets_out,
    count_out,
  ),
);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Pointer<MiniAVAudioInfo>>,
    ffi.Pointer<ffi.Uint32>,
  )
>(symbol: 'MiniAV_Loopback_GetSupportedFormats')
external int _MiniAV_Loopback_GetSupportedFormats(
  ffi.Pointer<ffi.Char> target_device_id,
  ffi.Pointer<ffi.Pointer<MiniAVAudioInfo>> formats_out,
  ffi.Pointer<ffi.Uint32> count_out,
);

MiniAVResultCode MiniAV_Loopback_GetSupportedFormats(
  ffi.Pointer<ffi.Char> target_device_id,
  ffi.Pointer<ffi.Pointer<MiniAVAudioInfo>> formats_out,
  ffi.Pointer<ffi.Uint32> count_out,
) => MiniAVResultCode.fromValue(
  _MiniAV_Loopback_GetSupportedFormats(
    target_device_id,
    formats_out,
    count_out,
  ),
);

@ffi.Native<
  ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<MiniAVAudioInfo>)
>(symbol: 'MiniAV_Loopback_GetDefaultFormat')
external int _MiniAV_Loopback_GetDefaultFormat(
  ffi.Pointer<ffi.Char> target_device_id,
  ffi.Pointer<MiniAVAudioInfo> format_out,
);

MiniAVResultCode MiniAV_Loopback_GetDefaultFormat(
  ffi.Pointer<ffi.Char> target_device_id,
  ffi.Pointer<MiniAVAudioInfo> format_out,
) => MiniAVResultCode.fromValue(
  _MiniAV_Loopback_GetDefaultFormat(target_device_id, format_out),
);

@ffi.Native<
  ffi.Int Function(MiniAVLoopbackContextHandle, ffi.Pointer<MiniAVAudioInfo>)
>(symbol: 'MiniAV_Loopback_GetConfiguredFormat')
external int _MiniAV_Loopback_GetConfiguredFormat(
  MiniAVLoopbackContextHandle context,
  ffi.Pointer<MiniAVAudioInfo> format_out,
);

MiniAVResultCode MiniAV_Loopback_GetConfiguredFormat(
  MiniAVLoopbackContextHandle context,
  ffi.Pointer<MiniAVAudioInfo> format_out,
) => MiniAVResultCode.fromValue(
  _MiniAV_Loopback_GetConfiguredFormat(context, format_out),
);

@ffi.Native<ffi.Int Function(ffi.Pointer<MiniAVLoopbackContextHandle>)>(
  symbol: 'MiniAV_Loopback_CreateContext',
)
external int _MiniAV_Loopback_CreateContext(
  ffi.Pointer<MiniAVLoopbackContextHandle> context_out,
);

MiniAVResultCode MiniAV_Loopback_CreateContext(
  ffi.Pointer<MiniAVLoopbackContextHandle> context_out,
) => MiniAVResultCode.fromValue(_MiniAV_Loopback_CreateContext(context_out));

@ffi.Native<ffi.Int Function(MiniAVLoopbackContextHandle)>(
  symbol: 'MiniAV_Loopback_DestroyContext',
)
external int _MiniAV_Loopback_DestroyContext(
  MiniAVLoopbackContextHandle context,
);

MiniAVResultCode MiniAV_Loopback_DestroyContext(
  MiniAVLoopbackContextHandle context,
) => MiniAVResultCode.fromValue(_MiniAV_Loopback_DestroyContext(context));

@ffi.Native<
  ffi.Int Function(
    MiniAVLoopbackContextHandle,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<MiniAVAudioInfo>,
  )
>(symbol: 'MiniAV_Loopback_Configure')
external int _MiniAV_Loopback_Configure(
  MiniAVLoopbackContextHandle context,
  ffi.Pointer<ffi.Char> target_device_id,
  ffi.Pointer<MiniAVAudioInfo> requested_format,
);

MiniAVResultCode MiniAV_Loopback_Configure(
  MiniAVLoopbackContextHandle context,
  ffi.Pointer<ffi.Char> target_device_id,
  ffi.Pointer<MiniAVAudioInfo> requested_format,
) => MiniAVResultCode.fromValue(
  _MiniAV_Loopback_Configure(context, target_device_id, requested_format),
);
